css/style.css
/* ==================== General Settings ===================================*/

:root {
    --primary-color: #333;
    --secondary-color: #444444;
    --overlay-color: rgba(0, 0, 0, 0.7);
  }
  
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: 'Catamaran', sans-serif;
  line-height: 1.6;
  color: #333;
  font-size: 1.1rem;
  background-color: rgb(233, 231, 231);
}

h1,
h2,
h3,
h4 {
  line-height: 1.3;
}

a {
  color: #ddd;
  text-decoration: none;
}

ul {
  list-style: none;
}

img {
  width: 100%;
  vertical-align: middle;
}

.container {
  max-width: 1200px;
  margin: auto;
  overflow: hidden;
  padding: 0;
}

/* ==================== Navbar ===================================*/

/* Note: vz ca merge doar combinatia: sticky - width:100% - max-width:1200px - margin: auto */
/* Note: vz ca NU merge cu fixed, ci cu sticky */
.Navbar {
  display: flex;
  overflow: hidden;
  position: sticky;
  top: 0;
  width: 100%;
  max-width: 1200px;
  margin: auto;
  background: var(--secondary-color);
  /* background-color: #777; */
  padding: 2px;
  font-family: sans-serif;
  color: white;
  align-items:center;
  font-size: 1.2rem;
  z-index: 1;
}

.Navbar__Items {
  display:flex;
}

.Navbar__Items--right {
  margin-left: auto;
}

.Navbar__Link {
  padding-right: 15px;
}

.Navbar__Link-toggle {
  display: none;
}

.Navbar__Link-brand {
  display:flex;
  align-items: center;
}

.Navbar-brand-name {
  display:none;
}

.Navbar__Link-brand img {
  width: 170px;
  height: auto;
  margin-right: 10px;
  margin-left: 10px;
}

nav a:hover {
  color: #fff;
}

/* ============================= Section-a: Prezentarea generala ======================================*/
.section-a {
  position: relative;
  background:
    linear-gradient(
      rgba(0, 0, 0, 0.2),
      rgba(0, 0, 0, 0.2)
    ),  
    url('../img/living-prezentare-1.jpeg') no-repeat bottom center/cover;
  height: 600px;
  max-width: 1200px;
  margin: auto;
  z-index: -1;
}

/* section-a-inner -> se refera la textul din interiorul lui Section-a */
.section-a-inner {
  color: #f0f0f0;
  height: 60%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  margin: auto;
  max-width: 860px;
  padding: 5rem 0;
}

.section-a-inner h3 {
  font-size: 4rem;
  line-height: 1.1;
  margin-top: 0.2rem;
}

.section-a-inner h2 {
  font-size: 2rem;
  margin-top: 2.5rem;
}

.section-a-inner p {
  font-size: 2.2rem;
  margin-top: 1rem;
}


/* ======================= Section-b - About Us ===============================*/
.section-b {
  margin: 2rem 0;
}

.section-b .container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 3rem;
  align-items: center;
  justify-content: center;
}

.section-b h1 {
  font-size: 3rem;
  color: #969caa;
}

.section-b p {
  margin: 1rem 0;
}

.section-b .product-button {
  color: #969caa;
  border: 1px solid #777;
  border-radius: 30px;
}

.section-b .btn:hover {
  color: #333;
}

/* ============================== Section-c - Services =============================*/

.section-c {
  /* margin: 1rem 0; */
  padding-top: 2rem;
}

.section-c .container {
  color: rgb(88, 88, 88);
  background-color: #aeb6c3;
  /* padding: 2rem 0; */
}

/* Next: am folosit 1-2-1fr pt a crea spatiul pt <hr> */
.section-c-first2Elements {
  display: grid;
  grid-template-columns: 1fr 2fr 1fr;
  grid-gap: 1rem;
  margin: 0.2rem 0;
  text-align: center;
}

.section-c-first2Elements h2 {
  font-size: 2rem;
  /* margin-top: 1rem; */
  text-align: center;
}

.section-c-first2Elements hr {
  border: none;
  margin-top: 0.5rem;
  margin-bottom: 1rem;
  border-top: 2px solid  rgb(88, 88, 88);
}

.section-c .row {
  display: flex;
  flex-wrap: wrap;
  justify-content:center; 
  /* justify-content:space-between;  */
}

/* PHOTOS = div urile din row ul care ma va trimite la pozele din fiecare categorie */
.section-c .photos {
  border: 1px solid #777;
  float: none;
  width: 130px;
  margin: 0 15px;
  justify-items: center;
}

.section-c .photos:hover {
  border: 1px solid #ccc;
}

.section-c .photos h3 {
  font-size: 1.5rem;
}

.section-c .photos img {
  width: 100%;
  height: 150px;
  padding: 3px;
}

.photos a:hover {
  /* color: #777; */
  text-decoration: none;
}

.section-c  .photos .desc {
  padding: 10px;
  text-align: center;
  color: #585858;
}

.section-c .home-button {
  color: #565f73;
  border: 1px solid #777;
  border-radius: 30px;
}

.section-c .btn:hover {
  color: #333;
  border: 1px solid #ccc;
}

  /* ========================= Section-d - Gallery =========================*/

  /* --------------------------------Start Slide--------------------------------------------- */

/* body, */
#slider,
.wrap,
.slide-content {
  margin: 0;
  padding: 0;
  font-family: Arial, Helvetica, sans-serif;
  width: 100%;
  height: 530px;
  /* height: auto; */
  overflow-x: hidden;
}

.wrap {
  position: relative;
  display: none;;
}

.slide {
  display: none;
}

.slide-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.arrow {
  cursor: pointer;
  position: absolute;
  top: 50%;
  margin-top: -35px;
  width: 0;
  height: 0;
  border-style: solid;
}

#arrow-left {
  border-width: 30px 40px 30px 0;
  border-color: transparent rgb(15, 15, 15) transparent transparent;
  left: 0;
  margin-left: 50px;
}

#arrow-right {
  border-width: 30px 0 30px 40px;
  border-color: transparent transparent transparent rgb(15, 15, 15);
  right: 0;
  margin-right: 50px;
}
/* ----------------------------End Slide------------------------------------------------- */

/* Slideshow container */
.slideshow-container {
  position: relative;
  margin: auto;
  overflow: hidden;
}

/* Portrait */
.mySlides img.portrait {
  position: relative;
  width: 300px;
  height: 500px;
  /* height: 533px; */
  margin-top: 5px;
  margin-bottom: 10px;
}

/* Landscape */
.mySlides img.landscape {
  position: relative;
  width: 680px;
  height: 430px;
  /* height: 422px; */
  margin-top: 5px;
  margin-bottom: 10px;
}

a.services-back-button {
  color: #fff;
  border: 1px solid #777;
  border-radius: 30px;
  position: relative;
  margin-bottom: 5px;
}

/* ========================= Section-footer =============================*/
.section-footer {
  background: var(--primary-color);
  color: #fff;
  max-width: 1200px;
  /* height: 80px; */
  margin: 0 auto;
   /* padding: 4rem 0; */
}

.section-footer .container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 1rem;
}

.grid-item {
  /* padding: 20px 0 0 0; */
  text-align: center;
}

.section-footer h3 {
  font-size: 1.3rem;
}

.section-footer h2 {
  font-size: 2rem;
  /* margin-bottom: 1rem; */
}

.section-footer p {
  color: #ccc;
  margin-bottom: 0;
}

.section-footer ul {
  margin-bottom: 0;
}

.section-footer a {
  /* line-height: 1.9; */
  color: #ccc;
}

.section-footer a:hover { 
  color: #555;
}

.section-footer a > i {
  color: #ccc;
  margin-right: 1rem; /* margine catre dreapta == spatiu intre icon uri*/
}

.section-footer a > i:hover { 
  color: #555;
}

.actions input:hover { 
  color: #fff;
}
 
.h-copyright {
  /* background-color: var(--main-black); */
  color: #555;
  text-align: center;
}


/* ~~~~~~~~~~~~~~~~~~~~~Responsive~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */ 

/* ================== Media Queries - 992px ========================================= */
@media only screen and (max-width: 992px) {
  
  .Navbar__Link-brand img {
    display: none;
  }

  .Navbar-brand-name {
    /* display:none; */
    display:flex;
    align-items: center;
    margin: 0 20px 0 10px;
  }

  .section-a-inner {
    padding: 4rem 0;
    height: 80%;
  }

  .section-a-inner h3 {
    font-size: 2.2rem;
  }
  
  .section-a-inner h2 {
    font-size: 1.2rem;
    margin-top: 2.5rem;
  }
  
  .section-a-inner p {
    margin-top: 2rem;
    font-size: 1.2rem;
  }
  
  .section-b .container {
    display: block;
    text-align: center;
  }
  
  .section-b h1 {
    font-size: 2.3rem;
  }

  .section-b img {
    display: none;
  }
  
  .section-b .btn {
    color: #aeb6c3;
    /* background-color: #ddd;  */
    background-color: rgb(233, 231, 231);
  } 

  .section-b .btn:hover {
    background-color: rgb(255, 255, 255);
  }

  .section-c .row {
    display: grid;
    grid-template-columns: auto auto auto;
    column-gap: 2px;
    row-gap: 2px;
    /* margin: 1rem 1rem 2rem 1rem; */
    text-align: center;
  }

  .section-c-first2Elements h2 {
    font-size: 1.5rem;
  }

  .section-c h3 {
    font-size: 1.5rem;
  }

  .section-c .btn {
    color: #777;
    background-color: #aeb6c3; 
    /* margin: auto; */
    /* width: 50%; */
  } 

  .section-c .btn:hover {
    background-color: rgb(255, 255, 255);
  }

  /* Portrait */
.mySlides img.portrait {
  position: relative;
  /* left: 50%; */
  width: 158px;
  height: 280px; 
  /* margin-left: -75px; */
}

/* Landscape */
.mySlides img.landscape {
  position: relative;
  /* left: 37%; */
  width: 500px;
  height: 280px; 
}


  /* ============================================ */
  /* Utilities (utility classes)- ne flam tot in @media 992px!!!*/
  .btn {
    display: inline-block;
    /* background: var(--primary-color); */
    color: rgb(255, 255, 255);
    padding: 0.8rem 1.5rem;
    border: none;
    cursor: pointer;
    font-size: 1.1rem;
    border-radius: 30px;
  }
  
  .btn:hover {
    background: var(--secondary-color);
  }

  .overlay {
    height: 100%;
    width: 100%;
    position: absolute;
    top: 30;
    left: 0;
    /* background-color: var(--overlay-color); */
  }

}


/* ================== Media Queries - 678px ========================================= */
@media only screen and (max-width: 678px) {
    
  .Navbar {
    font-size: 1rem;
  }

  .Navbar,
  .Navbar__Items
   {
    flex-direction: column;
  }

  .Navbar {
    align-items:flex-start;
  }

  .Navbar__Items {
    display:none;
  }

  .Navbar__Items--right {
    margin-left: 0;
  }

  .Navbar__Link-brand {
    display:flex;
    align-items:center;
    justify-content:flex-start;
   }

  .Navbar__ToggleShow {
    display: flex;
  }

  .Navbar__Link-toggle {
    align-self: flex-end;
    display: initial;
    position: absolute;
    cursor: pointer;
  }
  
  .icon-bars {
    width: 25px;
    height: 2px;
    background-color: rgb(250, 250, 250);
    margin: 6px 0;
  }

  .section-a-inner {
    padding: 2rem 0;
    height: 60%;
  }

  .section-c .row {
    display: grid;
    grid-template-columns: auto auto;
    column-gap: 2px;
    row-gap: 2px;
    /* margin: 1rem 1rem 2rem 1rem; */
    text-align: center;
  }

/* Portrait */
.mySlides img.portrait {
  position: relative;
  /* left: 50%; */
  width: 158px;
  height: 280px; 
  /* margin-left: -75px;  */
}

/* Landscape */
.mySlides img.landscape {
  position: relative;
  /* left: 30%; */
  width: 500px;
  height: 280px;
  /* margin-left: -130px;  */
}

  .section-footer {
    padding: 2rem 0;
  }

  .section-footer .container {
    grid-template-columns: 1fr;
    text-align: center;
  }

  .section-footer div {
    padding-bottom: 1rem;
    line-height: 1;
  }

  .section-footer h3 {
    font-size: 1.5rem;
  }

}

